[package]
name = "proxy"
version = "0.1.0"
authors = ["陶辰 <chen.tao@ifchange.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
yaml-rust = "0.4.3"
failure = "0.1.6"
exitfailure = "0.5.1"
mio = { git = "https://github.com/tokio-rs/mio.git" }
net2 = "0.2"
